MEP fixing upsell in ie, and adding fixed height to tags form not to overlap email to friend link

--- a/skin/frontend/enterprise/default/css/styles-ie.css
+++ b/skin/frontend/enterprise/default/css/styles-ie.css
@@ -34,8 +34,7 @@
 .validation-advice { _height:13px; _display:inline; }
 .cart .cart-collaterals { _height:413px; }
 .opc li.section { vertical-align:top; }
-.products-grid .product-name { _height:2em; }
-.products-grid .actions { _height:70px; }
+
 .giftcard-send-form   { float:left; width:416px; display:inline; margin-bottom:-40px;}
 .top-cart  { _width:10px; }
 .cart .crosssell { _height:400px; }
